Compras/Pedidos terminado, reportes de mantenimiento terminados, reporte de ventas iniciado NO ABRIR REPORTE POR AHORA

--- a/Athenas/.settings/org.eclipse.core.resources.prefs
+++ b/Athenas/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//src/reportes/CDP.jrxml=UTF-8
 encoding//src/reportes/ListaClientes.jrxml=UTF-8
 encoding//src/reportes/ListaProductos.jrxml=UTF-8
 encoding//src/reportes/ListaPromos.jrxml=UTF-8
@@ -6,3 +7,4 @@ encoding//src/reportes/ListaPromosActual.jrxml=UTF-8
 encoding//src/reportes/ListaPromosVencidas.jrxml=UTF-8
 encoding//src/reportes/ListaProveedores.jrxml=UTF-8
 encoding//src/reportes/ListaTrabajadores.jrxml=UTF-8
+encoding/DetalleVenta.jrxml=UTF-8
